--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       - "redis"
       - "cups"
     privileged: true
+    labels:
+      io.balena.features.supervisor-api: "1"
     network_mode: host
     volumes:
       - "settings:/data"
