--- a/websocket/package.json
+++ b/websocket/package.json
@@ -23,6 +23,7 @@
     "@types/uuid": "^7.0.0",
     "@types/ws": "^7.2.2",
     "action-cable-node": "https://github.com/Entabeni/action-cable-node/tarball/old-acn",
+    "address": "^1.1.2",
     "apollo-boost": "^0.4.7",
     "apollo-client": "2.5.1",
     "apollo-link-ws": "1.0.17",
@@ -31,6 +32,7 @@
     "eslint-config-prettier": "^6.5.0",
     "eslint-plugin-prettier": "^3.1.1",
     "form-data": "^3.0.0",
+    "getmac": "^5.16.0",
     "graphql": "^14.3.0",
     "graphql-ruby-client": "1.6.4",
     "https": "^1.0.0",
@@ -51,7 +53,7 @@
     "ws": "^7.0.0"
   },
   "devDependencies": {
-    "@types/node": "^13.9.0",
+    "@types/node": "^13.13.21",
     "eslint": "^6.6.0",
     "nodemon": "^2.0.2",
     "ts-node": "^8.6.2",
