--- a/websocket/package.json
+++ b/websocket/package.json
@@ -24,9 +24,11 @@
     "@types/ws": "^7.2.2",
     "action-cable-node": "https://github.com/Entabeni/action-cable-node/tarball/old-acn",
     "address": "^1.1.2",
-    "apollo-boost": "^0.4.7",
-    "apollo-client": "2.5.1",
+    "apollo-boost": "^0.4.9",
+    "apollo-client": "^2.6.10",
+    "apollo-link-http": "^1.5.17",
     "apollo-link-ws": "1.0.17",
+    "cross-fetch": "^3.0.6",
     "dotenv": "^8.2.0",
     "escpos": "^2.4.9",
     "eslint-config-prettier": "^6.5.0",
@@ -48,6 +50,7 @@
     "rsmq-worker": "^0.5.2",
     "serialport": "7.1.5",
     "subscriptions-transport-ws": "^0.9.16",
+    "url": "^0.11.0",
     "usb": "^1.5.0",
     "uuid": "^7.0.2",
     "ws": "^7.0.0"
