--- a/cups/cupsd.conf
+++ b/cups/cupsd.conf
@@ -34,7 +34,7 @@ WebInterface Yes
 # Open access to the admin pages
 <Location /admin>
   Order allow,deny
-  Allow all
+  Allow from 192.168.0.45
 </Location>
 
 # Open access to configuration files
@@ -42,7 +42,7 @@ WebInterface Yes
   # AuthType Default
   # Require user @SYSTEM
   Order allow,deny
-  Allow all
+  Allow from 192.168.0.45
 </Location>
 
 # Open access to log files
@@ -50,7 +50,7 @@ WebInterface Yes
   # AuthType Default
   # Require user @SYSTEM
   Order allow,deny
-  Allow all
+  Allow from 192.168.0.45
 </Location>
 
 # Set the default printer/job policies...
@@ -76,7 +76,7 @@ WebInterface Yes
     # AuthType Default
     # Require user @SYSTEM
     Order deny,allow
-    Allow all
+    Allow from 192.168.0.45
   </Limit>
 
   # All printer operations require a printer operator to authenticate...
@@ -122,7 +122,7 @@ WebInterface Yes
     # AuthType Default
     # Require user @SYSTEM
     Order deny,allow
-    Allow all
+    Allow from 192.168.0.45
   </Limit>
 
   # All printer operations require a printer operator to authenticate...
@@ -169,7 +169,7 @@ WebInterface Yes
     # AuthType Default
     # Require user @SYSTEM
     Order deny,allow
-    Allow all
+    Allow from 192.168.0.45
   </Limit>
 
   # All printer operations require a printer operator to authenticate...
