--- a/cups/cupsd.conf
+++ b/cups/cupsd.conf
@@ -12,6 +12,7 @@ Listen /run/cups/cups.sock
 
 # Modify ServerAlias
 ServerAlias *
+ServerName /var/run/cups/cups.sock
 
 # Modify DefaultEncryption
 DefaultEncryption Never
