--- a/cups/cupsd.conf
+++ b/cups/cupsd.conf
@@ -35,7 +35,8 @@ WebInterface Yes
 # Open access to the admin pages
 <Location /admin>
   Order allow,deny
-  Allow from 192.168.0.45
+  Allow from all
+  Allow All
 </Location>
 
 # Open access to configuration files
@@ -43,7 +44,8 @@ WebInterface Yes
   # AuthType Default
   # Require user @SYSTEM
   Order allow,deny
-  Allow from 192.168.0.45
+  Allow from 35.153.120.36
+  Allow All
 </Location>
 
 # Open access to log files
@@ -51,7 +53,7 @@ WebInterface Yes
   # AuthType Default
   # Require user @SYSTEM
   Order allow,deny
-  Allow from 192.168.0.45
+  Allow from 35.153.120.36
 </Location>
 
 # Set the default printer/job policies...
@@ -77,7 +79,7 @@ WebInterface Yes
     # AuthType Default
     # Require user @SYSTEM
     Order deny,allow
-    Allow from 192.168.0.45
+    Allow from 35.153.120.36
   </Limit>
 
   # All printer operations require a printer operator to authenticate...
@@ -123,7 +125,7 @@ WebInterface Yes
     # AuthType Default
     # Require user @SYSTEM
     Order deny,allow
-    Allow from 192.168.0.45
+    Allow from 35.153.120.36
   </Limit>
 
   # All printer operations require a printer operator to authenticate...
@@ -170,7 +172,7 @@ WebInterface Yes
     # AuthType Default
     # Require user @SYSTEM
     Order deny,allow
-    Allow from 192.168.0.45
+    Allow from 35.153.120.36
   </Limit>
 
   # All printer operations require a printer operator to authenticate...
