--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       - "redis"
       - "cups"
     privileged: true
+    environment:
+      - DBUS_SYSTEM_BUS_ADDRESS=unix:path=/host/run/dbus/system_bus_socket
     labels:
       io.balena.features.supervisor-api: "1"
     network_mode: host
