--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,3 +54,7 @@ services:
       io.balena.features.dbus: "1"
       io.balena.features.supervisor-api: "1"
       io.balena.features.balena-api: "1"
+  purge:
+    restart: always
+    build: ./purge
+    privileged: true
