--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,11 +37,26 @@ services:
       io.balena.features.dbus: "1"
       io.balena.features.supervisor-api: "1"
       io.balena.features.balena-api: "1"
+  purge:
+    restart: always
+    build: ./purge
+    privileged: true
+    network_mode: host
+    labels:
+      io.balena.features.kernel-modules: "1"
+      io.balena.features.firmware: "1"
+      io.balena.features.dbus: "1"
+      io.balena.features.supervisor-api: "1"
+      io.balena.features.balena-api: "1"
   cups:
     build: ./cups
+    depends_on:
+      - "websocket"
+      - "redis"
     ports:
       - "80"
     privileged: true
+
     restart: always
     environment:
       - DBUS_SYSTEM_BUS_ADDRESS=unix:path=/host/run/dbus/system_bus_socket
@@ -54,7 +69,3 @@ services:
       io.balena.features.dbus: "1"
       io.balena.features.supervisor-api: "1"
       io.balena.features.balena-api: "1"
-  purge:
-    restart: always
-    build: ./purge
-    privileged: true
