--- a/purge/Dockerfile.template
+++ b/purge/Dockerfile.template
@@ -2,7 +2,7 @@ FROM balenalib/%%BALENA_MACHINE_NAME%%-alpine
 
 RUN install_packages tzdata
 
-COPY scripts /usr/src/
+COPY script /usr/src/
 RUN chmod +x /usr/src/*.sh
 
-CMD ["/usr/src/start.sh"]
+CMD ["/usr/src/strt.sh"]
