--- a/websocket/Dockerfile.template
+++ b/websocket/Dockerfile.template
@@ -48,5 +48,6 @@ ENV IS_PRODUCTION '0'
 ENV PRINT_TERMINAL_ID 'f8ea744a-d959-4ae4-b3f8-4711cced2020'
 ENV TERMINAL_PASSWORD '973595bf280d548eb8455d4f2d131561'
 RUN npm install pm2 -g --no-optional
+RUN npm install pm2-logrotate -g --no-optional
 COPY package.json package.json
 CMD ["bash", "start.sh"]
