--- a/websocket/package.json
+++ b/websocket/package.json
@@ -35,6 +35,7 @@
     "getmac": "^5.16.0",
     "graphql": "^14.3.0",
     "graphql-ruby-client": "1.6.4",
+    "node-native-printer": "1.0.0-beta.5",
     "https": "^1.0.0",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.10",
